loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-lb-2
  namespace: openfaas
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz" # Le chemin de vérification de santé
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
