postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: openfaas  # Spécifier le namespace ici
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
            - mountPath: /docker-entrypoint-initdb.d
              name: init-scripts  # Ajout du volume contenant le script d'initialisation
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: init-scripts  # Volume pour le script d'initialisation
          configMap:
            name: init-scripts

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: openfaas  # Spécifier le namespace ici
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
