postgres-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
  namespace: openfaas
spec:
  type: NodePort
  selector:
    app: postgres  # Assure-toi que ce label existe sur ton pod PostgreSQL
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432  # Port accessible depuis l'extérieur (doit être entre 30000-32767)
      protocol: TCP
